mlir-c/IR.h

  /** Named MLIR attribute.
 *
 * A named attribute is essentially a (name, attribute) pair where the name is
 * a string.
 */
  struct MlirNamedAttribute
  {
    MlirStringRef name;
    MlirAttribute attribute;
  };
  typedef struct MlirNamedAttribute MlirNamedAttribute;
  //===----------------------------------------------------------------------===//
  // Value API.
  //===----------------------------------------------------------------------===//

  /// Returns whether the value is null.
  static inline bool mlirValueIsNull(MlirValue value) { return !value.ptr; }
  /// Returns 1 if two values are equal, 0 otherwise.
  bool mlirValueEqual(MlirValue value1, MlirValue value2);
  /// Returns 1 if the value is a block argument, 0 otherwise.
  MLIR_CAPI_EXPORTED bool mlirValueIsABlockArgument(MlirValue value);
  /// Returns 1 if the value is an operation result, 0 otherwise.
  MLIR_CAPI_EXPORTED bool mlirValueIsAOpResult(MlirValue value);
  /** Returns the block in which this value is defined as an argument. Asserts if
 * the value is not a block argument. */
  MLIR_CAPI_EXPORTED MlirBlock mlirBlockArgumentGetOwner(MlirValue value);
  /// Returns the position of the value in the argument list of its block.
  MLIR_CAPI_EXPORTED intptr_t mlirBlockArgumentGetArgNumber(MlirValue value);
  /// Sets the type of the block argument to the given type.
  MLIR_CAPI_EXPORTED void mlirBlockArgumentSetType(MlirValue value,
                                                   MlirType type);
  /** Returns an operation that produced this value as its result. Asserts if the
 * value is not an op result. */
  MLIR_CAPI_EXPORTED MlirOperation mlirOpResultGetOwner(MlirValue value);
  /** Returns the position of the value in the list of results of the operation
 * that produced it. */
  MLIR_CAPI_EXPORTED intptr_t mlirOpResultGetResultNumber(MlirValue value);
  /// Returns the type of the value.
  MLIR_CAPI_EXPORTED MlirType mlirValueGetType(MlirValue value);
  /// Prints the value to the standard error stream.
  MLIR_CAPI_EXPORTED void mlirValueDump(MlirValue value);
  /** Prints a value by sending chunks of the string representation and
 * forwarding `userData to `callback`. Note that the callback may be called
 * several times with consecutive chunks of the string. */
  MLIR_CAPI_EXPORTED void
  mlirValuePrint(MlirValue value, MlirStringCallback callback, void *userData);
  //===----------------------------------------------------------------------===//
  // Type API.
  //===----------------------------------------------------------------------===//

  /// Parses a type. The type is owned by the context.
  MLIR_CAPI_EXPORTED MlirType mlirTypeParseGet(MlirContext context,
                                               MlirStringRef type);
  /// Gets the context that a type was created with.
  MLIR_CAPI_EXPORTED MlirContext mlirTypeGetContext(MlirType type);
  /// Checks whether a type is null.
  static inline bool mlirTypeIsNull(MlirType type) { return !type.ptr; }
  /// Checks if two types are equal.
  MLIR_CAPI_EXPORTED bool mlirTypeEqual(MlirType t1, MlirType t2);
  /** Prints a location by sending chunks of the string representation and
 * forwarding `userData to `callback`. Note that the callback may be called
 * several times with consecutive chunks of the string. */
  MLIR_CAPI_EXPORTED void
  mlirTypePrint(MlirType type, MlirStringCallback callback, void *userData);
  /// Prints the type to the standard error stream.
  MLIR_CAPI_EXPORTED void mlirTypeDump(MlirType type);
  //===----------------------------------------------------------------------===//
  // Attribute API.
  //===----------------------------------------------------------------------===//

  /// Parses an attribute. The attribute is owned by the context.
  MLIR_CAPI_EXPORTED MlirAttribute mlirAttributeParseGet(MlirContext context,
                                                         MlirStringRef attr);
  /// Gets the context that an attribute was created with.
  MLIR_CAPI_EXPORTED MlirContext mlirAttributeGetContext(MlirAttribute attribute);
  /// Gets the type of this attribute.
  MLIR_CAPI_EXPORTED MlirType mlirAttributeGetType(MlirAttribute attribute);
  /// Checks whether an attribute is null.
  static inline bool mlirAttributeIsNull(MlirAttribute attr) { return !attr.ptr; }
  /// Checks if two attributes are equal.
  MLIR_CAPI_EXPORTED bool mlirAttributeEqual(MlirAttribute a1, MlirAttribute a2);
  /** Prints an attribute by sending chunks of the string representation and
 * forwarding `userData to `callback`. Note that the callback may be called
 * several times with consecutive chunks of the string. */
  MLIR_CAPI_EXPORTED void mlirAttributePrint(MlirAttribute attr,
                                             MlirStringCallback callback,
                                             void *userData);
  /// Prints the attribute to the standard error stream.
  MLIR_CAPI_EXPORTED void mlirAttributeDump(MlirAttribute attr);
  /// Associates an attribute with the name. Takes ownership of neither.
  MLIR_CAPI_EXPORTED MlirNamedAttribute mlirNamedAttributeGet(MlirStringRef name,
                                                              MlirAttribute attr);
  //===----------------------------------------------------------------------===//
  // Identifier API.
  //===----------------------------------------------------------------------===//

  /// Gets an identifier with the given string value.
  MLIR_CAPI_EXPORTED MlirIdentifier mlirIdentifierGet(MlirContext context,
                                                      MlirStringRef str);
  /// Checks whether two identifiers are the same.
  MLIR_CAPI_EXPORTED bool mlirIdentifierEqual(MlirIdentifier ident,
                                              MlirIdentifier other);
  /// Gets the string value of the identifier.
  MLIR_CAPI_EXPORTED MlirStringRef mlirIdentifierStr(MlirIdentifier ident);