src/stubs/ir.ml


  module Value = struct
    (* Returns whether the value is null. *)
    let is_null = foreign "mlirValueIsNull" (Typs.Value.t @-> returning bool)

    (* Returns 1 if two values are equal, 0 otherwise. *)
    (* mlirValueEqual does not seem to be exported *)
    let equal = foreign "mlirValueEqual" (Typs.Value.t @-> Typs.Value.t @-> returning bool)

    (* Returns 1 if the value is a block argument, 0 otherwise. *)
    let is_block_argument =
      foreign "mlirValueIsABlockArgument" (Typs.Value.t @-> returning bool)


    (* Returns 1 if the value is an operation result, 0 otherwise. *)
    let is_op_result = foreign "mlirValueIsAOpResult" (Typs.Value.t @-> returning bool)

    (* Returns the block in which this value is defined as an argument. Asserts if
     * the value is not a block argument. *)
    let block_argument_get_owner =
      foreign "mlirBlockArgumentGetOwner" (Typs.Value.t @-> returning Typs.Block.t)


    (* Returns the position of the value in the argument list of its block. *)
    let block_argument_arg_num =
      foreign "mlirBlockArgumentGetArgNumber" (Typs.Value.t @-> returning intptr_t)


    (* Sets the type of the block argument to the given type. *)
    let block_argument_set_type =
      foreign "mlirBlockArgumentSetType" (Typs.Value.t @-> Typs.Type.t @-> returning void)


    (* Returns an operation that produced this value as its result. Asserts if the
     * value is not an op result. *)
    let op_result_get_owner =
      foreign "mlirOpResultGetOwner" (Typs.Value.t @-> returning Typs.Operation.t)


    (* Returns the position of the value in the list of results of the operation
   * that produced it. *)
    let op_result_get_result_num =
      foreign "mlirOpResultGetResultNumber" (Typs.Value.t @-> returning intptr_t)


    (* Returns the type of the value. *)
    let get_type = foreign "mlirValueGetType" (Typs.Value.t @-> returning Typs.Type.t)

    (* Prints the value to the standard error stream. *)
    let dump = foreign "mlirValueDump" (Typs.Value.t @-> returning void)

    (* Prints a value by sending chunks of the string representation and
   * forwarding `userData to `callback`. Note that the callback may be called
   * several times with consecutive chunks of the string. *)
    let print =
      foreign
        "mlirValuePrint"
        (Typs.Value.t @-> Typs.string_callback @-> ptr void @-> returning void)
  end

  (*===----------------------------------------------------------------------===
   * Type API.
   *===----------------------------------------------------------------------===*)

  module Type = struct
    (* Parses a type. The type is owned by the context. *)
    let parse =
      foreign
        "mlirTypeParseGet"
        (Typs.Context.t @-> Typs.StringRef.t @-> returning Typs.Type.t)


    (* Gets the context that a type was created with. *)
    let context = foreign "mlirTypeGetContext" (Typs.Type.t @-> returning Typs.Context.t)

    (* Checks whether a type is null. *)
    let is_null = foreign "mlirTypeIsNull" (Typs.Type.t @-> returning bool)

    (* Checks if two types are equal. *)
    let equal = foreign "mlirTypeEqual" (Typs.Type.t @-> Typs.Type.t @-> returning bool)

    (* Prints a location by sending chunks of the string representation and
   * forwarding `userData to `callback`. Note that the callback may be called
   * several times with consecutive chunks of the string. *)
    let print =
      foreign
        "mlirTypePrint"
        (Typs.Type.t @-> Typs.string_callback @-> ptr void @-> returning void)


    (* Prints the type to the standard error stream. *)
    let dump = foreign "mlirTypeDump" (Typs.Type.t @-> returning void)
  end

  (*===----------------------------------------------------------------------===
   * Attribute API.
   *===----------------------------------------------------------------------===*)

  module Attribute = struct
    (* Parses an attribute. The attribute is owned by the context. *)
    let parse_get =
      foreign
        "mlirAttributeParseGet"
        (Typs.Context.t @-> Typs.StringRef.t @-> returning Typs.Attribute.t)


    (* Gets the context that an attribute was created with. *)
    let context =
      foreign "mlirAttributeGetContext" (Typs.Attribute.t @-> returning Typs.Context.t)


    (* Gets the type of this attribute. *)
    let get_type =
      foreign "mlirAttributeGetType" (Typs.Attribute.t @-> returning Typs.Type.t)


    (* Checks whether an attribute is null. *)
    let is_null = foreign "mlirAttributeIsNull" (Typs.Attribute.t @-> returning bool)

    (* Checks if two attributes are equal. *)
    let equal =
      foreign
        "mlirAttributeEqual"
        (Typs.Attribute.t @-> Typs.Attribute.t @-> returning bool)


    (* Prints an attribute by sending chunks of the string representation and
   * forwarding `userData to `callback`. Note that the callback may be called
   * several times with consecutive chunks of the string. *)
    let print =
      foreign
        "mlirAttributePrint"
        (Typs.Attribute.t @-> Typs.string_callback @-> ptr void @-> returning void)


    (* Prints the attribute to the standard error stream. *)
    let dump = foreign "mlirAttributeDump" (Typs.Attribute.t @-> returning void)

    (* Associates an attribute with the name. Takes ownership of neither. *)
    let get_named_attribute =
      foreign
        "mlirNamedAttributeGet"
        (Typs.StringRef.t @-> Typs.Attribute.t @-> returning Typs.NamedAttribute.t)
  end

  (* Identifier API *)
  module Identifier = struct
    let get =
      foreign
        "mlirIdentifierGet"
        (Typs.Context.t @-> Typs.StringRef.t @-> returning Typs.Identifier.t)


    let equal =
      foreign
        "mlirIdentifierEqual"
        (Typs.Identifier.t @-> Typs.Identifier.t @-> returning bool)


    let to_string =
      foreign "mlirIdentifierStr" (Typs.Identifier.t @-> returning Typs.StringRef.t)
  end
end
